<resources>
    <string name="app_name">RedMad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workplaces">Workplaces</string>
    <string name="FindYourPlace">Найди своё место</string>
    <string name="email_enter">Войти по почте</string>
    <string name="email_sign_up">Регистрация по почте</string>
    <string name="enter_by_email">Вход по почте</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="to_sign_up">Перейти к регистрации</string>
    <string name="nice_to_meet_you">Nice to meet you</string>
    <string name="to_list">Перейти к ленте</string>
    <string name="register_text">Регистрация</string>
    <string name="is_registered">Уже зарегистрирован</string>
    <string name="next">Далее</string>
    <string name="to_reg">Зарегистрироваться</string>
    <string name="nickname">Никнейм</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birth_date">Дата рождения</string>
    <string name="Empty">Пустота</string>
    <string name="u_need_friend">Вам нужны друзья, чтобы лента стала живой</string>
    <string name="find_friends">Найти друзей</string>
    <string name="find_friends_text">Поиск друзей</string>
    <string name="name_or_nickname">Имя или никнейм</string>
    <string name="username_item">Иван Мешков</string>
    <string name="nikolaalset">\@nikolaalset</string>
    <string name="popular">Популярное</string>
    <string name="test_text">Soprano, we like to keep it on a high note. It\'s levels to it, you and I know</string>
    <string name="kshn13">\@kshn13</string>
    <string name="error_text">Упс...</string>
    <string name="smth_went_wrong">Что-то пошло не так</string>
    <string name="exit">Выйти</string>
    <string name="test_fio">Александр Кашин</string>
    <string name="age_25">25 лет</string>
    <string name="posts">Посты</string>
    <string name="likes">Лайки</string>
    <string name="Friends">Друзья</string>
    <string name="pls_speak">Если молчать, люди никогда не узнают о вас</string>
    <string name="create_post">Создать пост</string>
    <string name="go_like_text">Вы ещё не поставили ни одного лайка, но можете из ленты</string>
    <string name="go_to_feed">Перейти к ленте</string>
    <string name="find_friend_pls_text">Вы пока одиноки в сервисе, но это можно исправить</string>
    <string name="go_find_friends">Найти друзей</string>
    <string name="save">Сохранить</string>
    <string name="what_to_say">Чем хотите поделиться?</string>
    <string name="loading">Загрузка...</string>
</resources>