<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F5F5F5"
    tools:context=".Profile">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/kshn13"/>

    <TextView
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="@id/user_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/user_name"
        android:layout_marginEnd="19dp"
        android:text="@string/exit"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lk_info_block"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/lk_user_backround">

        <ImageView
            android:id="@+id/user_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lk_user_logo"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/user_fio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="@id/user_logo"
            app:layout_constraintLeft_toRightOf="@id/user_logo"
            android:layout_marginLeft="16dp"
            android:text="@string/test_fio"/>

        <TextView
            android:id="@+id/user_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintLeft_toRightOf="@id/user_logo"
            app:layout_constraintTop_toBottomOf="@id/user_fio"
            android:layout_marginLeft="16dp"
            android:text="@string/age_25"/>

        <ImageView
            android:id="@+id/add_friend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/edit_profile_button"
            app:layout_constraintRight_toLeftOf="@id/edit_profile_button"
            app:layout_constraintBottom_toBottomOf="@id/edit_profile_button"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_add_icon"/>

        <ImageView
            android:id="@+id/edit_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/edit_profile"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/backround_for_menu"
        app:layout_constraintTop_toBottomOf="@id/lk_info_block">

        <TextView
            android:id="@+id/posts_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/like_select"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/posts"/>

        <TextView
            android:id="@+id/like_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#A2ACC1"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/posts_select"
            app:layout_constraintRight_toLeftOf="@id/friends_select"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/likes"/>

        <TextView
            android:id="@+id/friends_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#A2ACC1"

            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/like_select"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/Friends"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/profile_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/profile_menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>